samples/_failures_safe/1761712245_a0cc54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ff54d06.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_7ff54d06.c:178:9: error: expected expression at end of input
  178 |         default: return
      |         ^~~~~~~
./samples/SAFE/__tmp_7ff54d06.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ff54d06.c:178:9: error: expected declaration or statement at end of input
